infrastructure/base/raspberry/envoy-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: envoy-gateway-system
